[gd_scene load_steps=22 format=2]

[ext_resource path="res://Assets/Players/sol_walk2.png" type="Texture" id=1]
[ext_resource path="res://Assets/Players/sol_crouch.png" type="Texture" id=2]
[ext_resource path="res://Assets/Players/sol_jump.png" type="Texture" id=3]
[ext_resource path="res://Assets/Players/luna_walk1.png" type="Texture" id=4]
[ext_resource path="res://Assets/Players/luna_walk3.png" type="Texture" id=5]
[ext_resource path="res://Assets/Players/luna_crouch.png" type="Texture" id=6]
[ext_resource path="res://Assets/Players/sol_fall.png" type="Texture" id=7]
[ext_resource path="res://Assets/Players/luna_walk2.png" type="Texture" id=8]
[ext_resource path="res://Assets/Players/luna_fall.png" type="Texture" id=9]
[ext_resource path="res://Assets/Players/sol_idle.png" type="Texture" id=10]
[ext_resource path="res://Assets/Players/luna_jump.png" type="Texture" id=11]
[ext_resource path="res://Assets/Players/sol_walk3.png" type="Texture" id=12]
[ext_resource path="res://Assets/Players/luna_walk4.png" type="Texture" id=13]
[ext_resource path="res://Assets/Players/luna_idle.png" type="Texture" id=14]
[ext_resource path="res://Assets/Players/sol_walk1.png" type="Texture" id=15]
[ext_resource path="res://Assets/Players/sol_walk4.png" type="Texture" id=16]
[ext_resource path="res://player1.gd" type="Script" id=17]
[ext_resource path="res://Assets/Sounds/jump.wav" type="AudioStream" id=18]

[sub_resource type="SpriteFrames" id=1]
animations = [ {
"frames": [ ExtResource( 4 ), ExtResource( 8 ), ExtResource( 5 ), ExtResource( 13 ) ],
"loop": true,
"name": "walk2",
"speed": 8.0
}, {
"frames": [ ExtResource( 14 ) ],
"loop": true,
"name": "idle2",
"speed": 5.0
}, {
"frames": [ ExtResource( 9 ) ],
"loop": true,
"name": "fall2",
"speed": 5.0
}, {
"frames": [ ExtResource( 15 ), ExtResource( 1 ), ExtResource( 12 ), ExtResource( 16 ) ],
"loop": true,
"name": "walk1",
"speed": 8.0
}, {
"frames": [ ExtResource( 2 ) ],
"loop": true,
"name": "crouch1",
"speed": 5.0
}, {
"frames": [ ExtResource( 7 ) ],
"loop": true,
"name": "fall1",
"speed": 5.0
}, {
"frames": [ ExtResource( 3 ) ],
"loop": true,
"name": "jump1",
"speed": 5.0
}, {
"frames": [ ExtResource( 11 ) ],
"loop": true,
"name": "jump2",
"speed": 5.0
}, {
"frames": [ ExtResource( 10 ) ],
"loop": true,
"name": "idle1",
"speed": 5.0
}, {
"frames": [ ExtResource( 6 ) ],
"loop": true,
"name": "crouch2",
"speed": 5.0
} ]

[sub_resource type="CircleShape2D" id=2]
radius = 24.5

[sub_resource type="CapsuleShape2D" id=3]
radius = 11.9566
height = 33.3551

[node name="player1" type="KinematicBody2D"]
collision_mask = 2047
script = ExtResource( 17 )

[node name="AnimatedSprite" type="AnimatedSprite" parent="."]
frames = SubResource( 1 )
animation = "crouch1"
playing = true

[node name="StandingShape" type="CollisionShape2D" parent="."]
position = Vector2( 0, 8 )
shape = SubResource( 2 )

[node name="CrouchingShape" type="CollisionShape2D" parent="."]
position = Vector2( 0, 20 )
rotation = 1.5708
shape = SubResource( 3 )
disabled = true

[node name="SoundJump" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 18 )
